# go-integrator

./: .gitignore  Makefile  README.md  docker-compose.yml
api/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
api/src/: custom_types.py  main.py  models.py  schemas.py
api/src/core/: database.py  settings.py
api/src/migrations/: env.py
api/src/migrations/versions/: 5ef4ad9d1221_init.py  b2c3da65cf26_init.py
api/src/utils/: __init__.py  general.py  ids.py
integrator/: .air.toml  Dockerfile  go.mod  main.go
k6/: namesList.js  seed-test.js  simples-test.js
